manifests/core/traefik/traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
spec:
  replicas: 2
  template:
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.7
          ports:
            - containerPort: 8080
            - containerPort: 443
          volumeMounts:
            - name: traefik-config
              mountPath: /etc/traefik/traefik.yaml # Path inside the container where the file will be mounted
              subPath: traefik.yaml
              readOnly: true
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config # Reference to the ConfigMap created by Kustomize
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  ports:
    - port: 443
      name: secure
      targetPort: 443
    - port: 8080
      name: dashboard
      targetPort: 8080
